# hwmon

./: .gitignore  README.md  build.bat  hwmon.spec  pyproject.toml
.github/workflows/: release.yml
hwmon/: amdadl.py  components.py  main.py  network.py  nvapi.py  pdh_counters.py  sensors.py  utils.py  window.py
